--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Cowork - Coworking Space Company">
         <title>Cowork - Coworking Space Company</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -52,7 +53,7 @@
                         <h2>Our Story</h2>
                         <h2 class="about-card-number">1</h2>
                     </div>
-                    <img src="images/Rectangle 3 (3).jpg" alt="space" class="image-second about-card-image active">
+                    <img src="images/Rectangle3(3).jpg" alt="space" class="image-second about-card-image active">
                     <p class="about-card-button active">Tap to expand</p>
                     <p class="about-card-text active">Cowork was founded in 2023 by Jensen Turner who saw an unmet need for dynamic, design-focused coworking spaces that foster connection and productivity. What started as a modest shared office has grown into Delaware premier coworking destination serving freelancers, startups, remote teams and more.</p>
                 </div>
@@ -62,7 +63,7 @@
                         <h2>Our Spaces</h2>
                         <h2 class="about-card-number">2</h2>
                     </div>
-                    <img src="images/Rectangle 3 (4).jpg" alt="space" class="image-second about-card-image">
+                    <img src="images/Rectangle3(4).jpg" alt="space" class="image-second about-card-image">
                     <p class="about-card-button">Tap to expand</p>
                     <p class="about-card-text">Cowork was founded in 2023 by Jensen Turner who saw an unmet need for dynamic, design-focused coworking spaces that foster connection and productivity. What started as a modest shared office has grown into Delaware premier coworking destination serving freelancers, startups, remote teams and more.</p>
                 </div>
@@ -72,7 +73,7 @@
                         <h2>Our Community</h2>
                         <h2 class="about-card-number">3</h2>
                     </div>
-                    <img src="images/Rectangle 3 (5).jpg" alt="space" class="image-second about-card-image">
+                    <img src="images/Rectangle3(5).jpg" alt="space" class="image-second about-card-image">
                     <p class="about-card-button">Tap to expand</p>
                     <p class="about-card-text">Cowork was founded in 2023 by Jensen Turner who saw an unmet need for dynamic, design-focused coworking spaces that foster connection and productivity. What started as a modest shared office has grown into Delaware premier coworking destination serving freelancers, startups, remote teams and more.</p>
                 </div>
@@ -160,7 +161,7 @@
 
         <section class="block claim animated-block">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle1(2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
