--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Cowork - Coworking Space Company">
         <title>Cowork - Coworking Space Company</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -52,10 +53,10 @@
                         <input type="text" name="first-name" id="first-name" placeholder="First Name *" class="contact-input" required>
                         <input type="text" name="last-name" id="last-name" placeholder="Last Name *" class="contact-input" required>
                     </div>
-                    <input type="email" name="email" id="email" placeholder="Email Address *" class="contact-input" required>
+                    <input type="email" name="email" id="email-contact" placeholder="Email Address *" class="contact-input" required>
                     <input type="tel" name="phone" id="phone" placeholder="Phone *" class="contact-input" required>
                     <div class="contact-select">
-                        <select name="plan" id="plan" placeholder="Select a plan" class="contact-input" required>
+                        <select name="plan" id="plan" class="contact-input" required>
                             <option value="" disabled selected hidden>Select a plan *</option>
                             <option value="Hot Desk">Hot Desk</option>
                             <option value="Dedicated Desk">Dedicated Desk</option>
