--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Cowork - Coworking Space Company">
         <title>Cowork - Coworking Space Company</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -69,7 +70,7 @@
         </section>
         
         <section class="block choose animated-block">
-            <h2 class="text-heading-2">Why Choose <img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Cowork?</h2>
+            <h2 class="text-heading-2">Why Choose <img src="images/Rectangle1.jpg" alt="decor" class="image-heading-2"> Cowork?</h2>
             <div class="choose-cards-wrap">
                 <div class="choose-card">
                     <div class="choose-icon"><img src="icons/Planet.svg" alt="planet icon" class="icon-big"></div>
@@ -95,14 +96,14 @@
         <section class="block explore animated-block">
             <div class="explore-disc block-disc">
                 <p class="text-subtitle explore-disc-p">A Virtual Tour</p>
-                <h2 class="text-heading-2">Explore Cowork Through Our <img src="images/Rectangle 12.jpg" alt="decor" class="image-heading-2"> Lens</h2>
+                <h2 class="text-heading-2">Explore Cowork Through Our <img src="images/Rectangle12.jpg" alt="decor" class="image-heading-2"> Lens</h2>
                 <p>Experience the essence of Cowork before setting foot in our dynamic spaces. 
                     Our immersive video tour gives you a sneak peek into the vibrant atmosphere, 
                     cutting-edge facilities, and collaborative energy that define the Cowork experience.</p>
                 <a href="pricing.html" class="button-big button-st-white">Explore Spaces</a>
             </div>
             <div class="explore-vid">
-                <img src="images/Image (1).jpg" alt="space" class="image-main">
+                <img src="images/Image(1).jpg" alt="space" class="image-main">
             </div>
         </section>
 
@@ -129,7 +130,7 @@
                     </div>
                 </div>
             </div>
-            <div class="stat-image"><img src="images/Image (2).jpg" alt="space" class="image-main"></div>
+            <div class="stat-image"><img src="images/Image(2).jpg" alt="space" class="image-main"></div>
         </section>
 
         <section class="block clients">
@@ -145,7 +146,7 @@
             <div class="clients-cards-wrap">
                 <div class="carusel__wrap">
                     <div class="clients-card card-def clients-card-not-viewed">
-                        <img src="images/Avatar Image (1).jpg" alt="client" class="image-avatar">
+                        <img src="images/AvatarImage(1).jpg" alt="client" class="image-avatar">
                         <p>“The aesthetics of Cowork are inspiring. 
                             The attention to detail in the design creates an atmosphere that sparks creativity. 
                             It's a place where ideas flow effortlessly, and collaboration happens organically.”
@@ -156,7 +157,7 @@
                         </div>
                     </div>
                     <div class="clients-card card-def clients-card-not-viewed">
-                        <img src="images/Avatar Image (3).jpg" alt="client" class="image-avatar">
+                        <img src="images/AvatarImage(3).jpg" alt="client" class="image-avatar">
                         <p>"The 24/7 access and secure facilities have been incredibly convenient for my team's flexible schedules. 
                             We love the coworking space!"
                         </p>
@@ -166,7 +167,7 @@
                         </div>
                     </div>
                     <div class="clients-card card-def clients-card-not-viewed">
-                        <img src="images/Avatar Image (2).jpg" alt="client" class="image-avatar">
+                        <img src="images/AvatarImage(2).jpg" alt="client" class="image-avatar">
                         <p>"As a freelance designer, I was getting tired of working from home or coffee shops. 
                             The coworking space has provided me with a productive and professional environment to focus on my work."
                         </p>
@@ -176,7 +177,7 @@
                         </div>
                     </div>
                     <div class="clients-card card-def clients-card-not-viewed">
-                        <img src="images/Avatar Image (6).jpg" alt="client" class="image-avatar">
+                        <img src="images/AvatarImage(6).jpg" alt="client" class="image-avatar">
                         <p>"The coworking space has been a wonderful resource for my team. 
                             The open floor plan and dedicated private offices allow us to collaborate and concentrate as needed."
                         </p>
@@ -186,7 +187,7 @@
                         </div>
                     </div>
                     <div class="clients-card card-def clients-card-not-viewed">
-                        <img src="images/Avatar Image (4).jpg" alt="client" class="image-avatar">
+                        <img src="images/AvatarImage(4).jpg" alt="client" class="image-avatar">
                         <p>"The flexible membership options and amenities like high-speed internet, 
                             printers, and meeting rooms have made this coworking space a perfect fit for my small business."
                         </p>
@@ -281,7 +282,7 @@
 
         <section class="block claim animated-block">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle1(2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
@@ -295,13 +296,13 @@
         <section class="block articles animated-block">
             <div class="block-disc articles-disc">
                 <p class="text-subtitle block-disc-title">Cowork Chronicles</p>
-                <h2 class="text-heading-2">Insights, Innovation, and  <img src="images/Inline Image (1).jpg" alt="decor" class="image-heading-2"> Inspiration</h2>
+                <h2 class="text-heading-2">Insights, Innovation, and  <img src="images/Inline Image(1).jpg" alt="decor" class="image-heading-2"> Inspiration</h2>
                 <p>Stay updated on the latest trends in coworking, productivity tips, and success stories that define the Cowork experience.</p>
             </div>
             <div class="articles-cards-button">
                 <div class="articles-cards-wrap">
                     <div class="article-card">
-                        <img src="images/Image (3).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(3).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -315,7 +316,7 @@
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="images/Image (4).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(4).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -329,7 +330,7 @@
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="images/Image (5).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(5).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-talk">Talk</p>
