--- a/singlepost.html
+++ b/singlepost.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Cowork - Coworking Space Company">
         <title>Cowork - Coworking Space Company</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -53,17 +54,17 @@
                         To help you build that vital virtual bridge, here are 7 essential team collaboration tools for remote workers:</p>
                         <div class="post-card-section animated-block">
                             <h2 class="text-heading-3">Video Conferencing: Zoom</h2>
-                            <img src="images/Rectangle 3.jpg" alt="post" class="image-main image-post">
+                            <img src="images/Rectangle3.jpg" alt="post" class="image-main image-post">
                             <p>When you can't meet face-to-face, video conferencing is the next best thing. Zoom has emerged as one of the most popular and user-friendly options. In addition to HD video calls, it offers screen sharing, recording capabilities, and integrations with other apps. Use it for virtual meetings, team check-ins, or even virtual co-working sessions.</p>
                         </div>
                         <div class="post-card-section animated-block">
                             <h2 class="text-heading-3">Project Management: Trello</h2>
-                            <img src="images/Rectangle 3 (1).jpg" alt="post" class="image-main image-post">
+                            <img src="images/Rectangle3(1).jpg" alt="post" class="image-main image-post">
                             <p>For streamlining project management, Trello is a simple and visual tool. Its card-based kanban boards allow you to create task lists, assign items to team members, set due dates, attach files, and more. The ability to easily see each project's status and quickly drag-and-drop tasks makes it ideal for remote teams.</p>
                         </div>
                         <div class="post-card-section animated-block">
                             <h2 class="text-heading-3">File Storage & Collaboration: Google Drive</h2>
-                            <img src="images/Rectangle 3 (2).jpg" alt="post" class="image-main image-post">
+                            <img src="images/Rectangle3(2).jpg" alt="post" class="image-main image-post">
                             <p>Having a centralized place to store and collaborate on documents, spreadsheets, and other files is vital when working remotely. Google Drive provides cloud storage and its suite of productivity apps integrates real-time co-editing so multiple team members can work on the same file simultaneously.</p>
                         </div>
                         <div class="post-text-section animated-block">
@@ -113,7 +114,7 @@
             <div class="articles-cards-button">
                 <div class="articles-cards-wrap">
                     <div class="article-card">
-                        <img src="images/Image (3).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(3).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-trend">Trending</p>
@@ -127,7 +128,7 @@
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="images/Image (4).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(4).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-prod">Productivity</p>
@@ -141,7 +142,7 @@
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="images/Image (5).jpg" alt="desk" class="image-second">
+                        <img src="images/Image(5).jpg" alt="desk" class="image-second">
                         <div class="article-card-disc">
                             <div class="article-card-disc-tags">
                                <p class="tag-col tag-talk">Talk</p>
@@ -162,7 +163,7 @@
 
         <section class="block claim animated-block">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle1(2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
