--- a/pricing.html
+++ b/pricing.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Cowork - Coworking Space Company">
         <title>Cowork - Coworking Space Company</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -129,7 +130,7 @@
         </section>
 
         <section class="services block animated-block">
-            <h2 class="text-heading-2">Add-ons <img src="images/Rectangle 1.jpg" alt="decor" class="image-heading-2"> Services</h2>
+            <h2 class="text-heading-2">Add-ons <img src="images/Rectangle1.jpg" alt="decor" class="image-heading-2"> Services</h2>
             <div class="services-cards-wrap choose-cards-wrap">
                 <div class="services-card card-def">
                     <div class="services-card-title">
@@ -180,7 +181,7 @@
 
         <section class="block claim animated-block">
             <div class="claim-disc">
-                <h2 class="text-heading-1">Seize <img src="images/Rectangle 1 (2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
+                <h2 class="text-heading-1">Seize <img src="images/Rectangle1(2).jpg" alt="decor" class="image-heading-1"> The Moment – Join Cowork Today!</h2>
                 <p>
                     Uncover the transformative power of Cowork as echoed by those who've made it their professional haven. 
                     This is more than finding a desk; it's discovering a community that fuels your journey to success.
